Can't Select Strand Points in Hair System while in Particle Edit Mode #62202

Closed
opened 2019-03-05 06:13:31 +01:00 by Troy Bowen · 5 comments

System Information
Operating system: Windows 10 Pro
Graphics card: Asus GTX 1070

Blender Version
Broken: 2.80 1df6a98b17
Worked: 2/19/2019

When entering particle edit mode, point select mode, you can no longer use the circle select option ( "c" key) to select individual particle steps in a hair strand. You can still use "L" to select a strand, but I have been unable to find a way to select an individual point.

Create a hair system with one strand.
Enter Particle Edit mode.
Select point select mode.
Try to select any points with the circle select tool "C key".

This is needed to add subdivisions between individual points if needed, select individual points to move, select roots too move, etc....

**System Information** Operating system: Windows 10 Pro Graphics card: Asus GTX 1070 **Blender Version** Broken: 2.80 1df6a98b176f Worked: 2/19/2019 When entering particle edit mode, point select mode, you can no longer use the circle select option ( "c" key) to select individual particle steps in a hair strand. You can still use "L" to select a strand, but I have been unable to find a way to select an individual point. Create a hair system with one strand. Enter Particle Edit mode. Select point select mode. Try to select any points with the circle select tool "C key". This is needed to add subdivisions between individual points if needed, select individual points to move, select roots too move, etc....
Author

Added subscriber: @TroyBoy

Added subscriber: @TroyBoy
Troy Bowen changed title from Can't Select Hair Particles to Can't Select Strand Points in Hair System while in Particle Edit Mode 2019-03-05 06:19:26 +01:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

This is probably caused by cbbdb5249f. Checking...

This is probably caused by cbbdb5249f. Checking...
Jacques Lucke self-assigned this 2019-03-05 10:49:15 +01:00

This issue was referenced by 5e999c249c

This issue was referenced by 5e999c249c9d8d317511b2f771d69fb5886c720c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62202
No description provided.