Fix T62202: circle select does not work on hair points